[gd_scene load_steps=12 format=3 uid="uid://fnu26keu0s7p"]

[ext_resource type="Texture2D" uid="uid://c2nnoq3xnrpow" path="res://assets/projectiles/Bullet.png" id="1_mkf8s"]
[ext_resource type="Script" uid="uid://c08hruslurvr3" path="res://scripts/bullet.gd" id="1_y25gk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y25gk"]
atlas = ExtResource("1_mkf8s")
region = Rect2(512, 256, 512, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5glv"]
atlas = ExtResource("1_mkf8s")
region = Rect2(512, 512, 512, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_h1aey"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y25gk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5glv")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qncy5"]
radius = 5.0
height = 54.0

[sub_resource type="Gradient" id="Gradient_y25gk"]
colors = PackedColorArray(1, 0.795924, 0, 1, 0.968418, 0.091354, 0.00654789, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_l5glv"]
gradient = SubResource("Gradient_y25gk")

[sub_resource type="Curve" id="Curve_y25gk"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.997183, 0.466429), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_l5glv"]
curve = SubResource("Curve_y25gk")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_y25gk"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 30.0
initial_velocity_max = 75.0
gravity = Vector3(0, 98, 0)
damping_min = 28.0
damping_max = 28.0
scale_curve = SubResource("CurveTexture_l5glv")
color_ramp = SubResource("GradientTexture1D_l5glv")

[node name="Bullet" type="Area2D"]
z_index = 99
collision_layer = 4
collision_mask = 9
script = ExtResource("1_y25gk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, -3)
scale = Vector2(0.0558305, 0.0558305)
sprite_frames = SubResource("SpriteFrames_h1aey")
frame_progress = 0.560511

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4.65661e-10, 1.19209e-07)
rotation = -1.57459
scale = Vector2(0.301866, 0.301866)
shape = SubResource("CapsuleShape2D_qncy5")

[node name="BulletExplosionGPUParticles2D" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
emitting = false
amount = 20
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_y25gk")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
